fix: truncate name and last message in chat list, unread badge, css fixes

--- a/src/dotnet/Chat.UI.Blazor/Components/ChatList/chat-list.css
+++ b/src/dotnet/Chat.UI.Blazor/Components/ChatList/chat-list.css
@@ -155,6 +155,14 @@ body.hoverable .navbar-item:hover .navbar-item-content > .c-container > .c-descr
     @apply bg-skeleton;
 }
 .chat-list .navbar-item-content .c-last-message .c-name {
+    @apply flex-none flex;
+    @apply max-w-1/2;
+    @apply truncate;
+    @apply whitespace-pre;
+    @apply text-xs text-02 font-medium;
+}
+.chat-list .navbar-item-content .c-last-message .c-colon {
+    @apply -ml-1;
     @apply text-xs text-02 font-medium;
 }
 .chat-list .navbar-item-content .c-last-message .c-text {
